--- a/index.html
+++ b/index.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Skope Designs | Sege Peter | Designing Brands. Building Code. Beyond Boundaries.</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<title>Skope Designs | Sege Peter | Web Design, Branding, UI/UX & Full-Stack Development</title>
 
-  <!-- SEO Meta -->
-  <meta name="description" content="Skope Designs—led by Sege Peter—crafts compelling digital experiences. Specializing in branding, responsive web design, and modern development with Tailwind, Java, Python, MySQL.">
-  <meta name="keywords" content="Skope Designs, Sege Peter, Branding, Web Developer, Tailwind CSS, UI/UX Design, Python Developer, Java Developer, MySQL">
-  <meta name="author" content="Sege Peter" />
-  <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://www.skopedesigns.com/" />
+<!-- Primary SEO Meta -->
+<meta name="description" content="Skope Designs—founded by Sege Peter—delivers high-performing web design, branding, and full-stack development. Experts in Tailwind CSS, UI/UX, Python, Java, and MySQL for modern, responsive, and scalable digital experiences." />
+<meta name="keywords" content="Skope Designs, Sege Peter, Web Design, Responsive Websites, Branding, UI/UX Design, Graphic Design, Tailwind CSS, Frontend Developer, Backend Developer, Full-Stack Developer, Python Developer, Java Developer, MySQL Database, SEO Optimization, Creative Web Agency, Digital Branding, Modern Web Solutions, Custom Websites, Portfolio Websites, Business Branding, Web Development Kenya" />
+<meta name="author" content="Sege Peter" />
+<meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+<link rel="canonical" href="https://www.skopedesigns.com/" />
 
-  <!-- Open Graph / Twitter -->
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.skopedesigns.com/" />
-  <meta property="og:title" content="Skope Designs | Designing Brands. Building Code. Beyond Boundaries." />
-  <meta property="og:description" content="Explore Skope Designs—where design, development, and innovation meet." />
-  <meta property="og:image" content="https://www.skopedesigns.com/fav.ico" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Skope Designs | Designing Brands. Building Code. Beyond Boundaries." />
-  <meta name="twitter:description" content="Explore Skope Designs—where design, development, and innovation meet." />
-  <meta name="twitter:image" content="https://www.skopedesigns.com/fav.ico" />
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.skopedesigns.com/" />
+<meta property="og:title" content="Skope Designs | Branding, UI/UX & Web Development by Sege Peter" />
+<meta property="og:description" content="Explore Skope Designs by Sege Peter—experts in branding, responsive web design, UI/UX, and full-stack development using Tailwind CSS, Python, Java, and MySQL." />
+<meta property="og:image" content="https://www.skopedesigns.com/logo.png" />
+
+<!-- Twitter Cards -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:url" content="https://www.skopedesigns.com/" />
+<meta name="twitter:title" content="Skope Designs | Branding, UI/UX & Web Development by Sege Peter" />
+<meta name="twitter:description" content="Skope Designs creates compelling brands, responsive websites, and scalable digital solutions powered by Tailwind CSS, Python, Java, and MySQL." />
+<meta name="twitter:image" content="https://www.skopedesigns.com/logo.png" />
+
+<!-- Favicon -->
+<link rel="icon" href="https://www.skopedesigns.com/fav.ico" type="image/x-icon" />
+
 
   <link rel="icon" href="fav.ico" type="image/x-icon" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
@@ -295,4 +302,5 @@
   </script>
 </body>
 </html>
+
 
