--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-ew<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
@@ -17,7 +17,7 @@ ew<!DOCTYPE html>
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://www.skopedesigns.com/" />
 <meta property="og:title" content="Skope Designs | Branding, UI/UX & Web Development by Sege Peter" />
-<meta property="og:description" content="Explore Skope Designs by Sege Peter—experts in branding, responsive web design, UI/UX, and full-stack development using Tailwind CSS, Python, Java, and MySQL." />
+<meta property="og:description" content="Explore Skope Designs by Sege Peter—experts in responsive web design, digital branding, UI/UX, and full-stack development using Tailwind CSS, Python, Java, and MySQL." />
 <meta property="og:image" content="https://www.skopedesigns.com/logo.png" />
 
 <!-- Twitter Cards -->
@@ -30,7 +30,7 @@ ew<!DOCTYPE html>
 <!-- Favicon -->
 <link rel="icon" href="https://www.skopedesigns.com/fav.ico" type="image/x-icon" />
 
-
+ <script type="application/ld+json" src="/seo-knowledge-graph.json"></script>
   <link rel="icon" href="fav.ico" type="image/x-icon" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
   <script src="https://cdn.tailwindcss.com"></script>
@@ -300,6 +300,7 @@ ew<!DOCTYPE html>
   })();
 </script>
   </script>
+  
 </body>
 </html>
 
