--- a/about.html
+++ b/about.html
@@ -23,7 +23,8 @@
   <meta name="twitter:title" content="Skope Designs | Designing Brands. Building Code. Beyond Boundaries." />
   <meta name="twitter:description" content="Explore Skope Designs—where design, development, and innovation meet." />
   <meta name="twitter:image" content="https://www.skopedesigns.com/fav.ico" />
-
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7759647476755654"
+     crossorigin="anonymous"></script>
   <link rel="icon" href="fav.ico" type="image/x-icon" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
   <script src="https://cdn.tailwindcss.com"></script>
@@ -447,4 +448,5 @@
   </script>
 </body>
 </html>
+
 
