--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,10 @@
   <meta name="twitter:description" content="Explore Skope Designs—where design, development, and innovation meet." />
   <meta name="twitter:image" content="https://www.skopedesigns.com/fav.ico" />
 
+  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7759647476755654"
+     crossorigin="anonymous"></script>
+  
   <link rel="icon" href="fav.ico" type="image/x-icon" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
   <script src="https://cdn.tailwindcss.com"></script>
@@ -685,4 +689,5 @@
   </script>
 </body>
 </html>
+
 
