--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 <meta name="twitter:description" content="Skope Designs creates compelling brands, responsive websites, and scalable digital solutions powered by Tailwind CSS, Python, Java, and MySQL." />
 <meta name="twitter:image" content="https://www.skopedesigns.com/logo.png" />
 
+  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7759647476755654"
+     crossorigin="anonymous"></script>
+  
 <!-- Favicon -->
 <link rel="icon" href="https://www.skopedesigns.com/fav.ico" type="image/x-icon" />
 
@@ -303,6 +307,7 @@
   
 </body>
 </html>
+
 
 
 
