--- a/portfolio.html
+++ b/portfolio.html
@@ -200,6 +200,12 @@
       image: "vm.png",
       link: "https://vincentmakori.co.ke"
     },
+     {
+      name: "Judes CBO",
+      description: "A community-driven platform for social empowerment and outreach. Features program tracking, member management, resource coordination, and impact reporting for effective community engagement.",
+      image: "judescbo.png",
+      link: "https://judescbo.org"
+    },
     {
       name: "Skope Designs",
       description: "Our official website featuring creative services, a live portfolio, blog hub, and testimonials. This site reflects our brand identity through strong visuals and clean UX.",
@@ -587,5 +593,6 @@
   </script>
 </body>
 </html>
+
 
 
