--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://www.skopedesigns.com/" />
-<meta property="og:title" content="Skope Designs | Branding, UI/UX & Web Development by Sege Peter" />
+<meta property="og:title" content="Skope Designs; We delivers high-performing web & graphic design, and full-stack development. Experts in  ReactJs, Tailwind CSS, UI/UX, Python, Java, and MySQL for modern, responsive, and scalable digital experiences." />
 <meta property="og:description" content="Explore Skope Designs by Sege Peter—experts in responsive web design, digital branding, UI/UX, and full-stack development using Tailwind CSS, Python, Java, and MySQL." />
 <meta property="og:image" content="https://www.skopedesigns.com/logo.png" />
 
@@ -307,6 +307,7 @@
   
 </body>
 </html>
+
 
 
 
