--- a/portfolio.html
+++ b/portfolio.html
@@ -187,38 +187,51 @@
 <script>
   AOS.init();
 
-  const projects = [
-    {
-      name: "Hope Rekindled Initiative",
-      description: "A dynamic and responsive platform for a youth-led mental health and empowerment initiative. Features a modern layout, chatbot integration, optimized content delivery, and engaging visuals.",
-      image: "hri.png",
-      link: "https://hoperekindledinitiative.org"
-    },
-    {
-      name: "Vincent Makori – Portfolio",
-      description: "A modern personal brand website for a creative designer and medical practitioner. Includes project galleries, testimonials, and a downloadable portfolio with responsive design.",
-      image: "vm.png",
-      link: "https://vincentmakori.co.ke"
-    },
-     {
-      name: "Judes CBO",
-      description: "A community-driven platform for social empowerment and outreach. Features program tracking, member management, resource coordination, and impact reporting for effective community engagement.",
-      image: "judescbo.png",
-      link: "https://judescbo.org"
-    },
-    {
-      name: "Skope Designs",
-      description: "Our official website featuring creative services, a live portfolio, blog hub, and testimonials. This site reflects our brand identity through strong visuals and clean UX.",
-      image: "sd.png",
-      link: "https://skopedesigns.co.ke"
-    },
-    {
-      name: "Light and Nature Foundation",
-      description: "An eco-conscious foundation site built for environmental education and action. Clean design, easy navigation, and optimized for mobile and outreach.",
-      image: "lna.png",
-      link: "https://light-and-nature-foundation.netlify.app/"
-    }
-  ];
+const projects = [
+  {
+    name: "Hope Rekindled Initiative",
+    description: "A youth-led mental health and empowerment platform with a clean, responsive design.",
+    image: "hri.png",
+    link: "https://hoperekindledinitiative.org"
+  },
+  {
+    name: "Vincent Makori – Portfolio",
+    description: "A modern personal portfolio showcasing projects, testimonials, and creative works.",
+    image: "vm.png",
+    link: "https://vincentmakori.co.ke"
+  },
+  {
+    name: "Judes CBO",
+    description: "A community platform supporting social outreach, empowerment, and impact reporting.",
+    image: "judescbo.png",
+    link: "https://judescbo.org"
+  },
+  {
+    name: "Community-Led Solutions CBO",
+    description: "A responsive CBO website promoting transparency, youth empowerment, and local action.",
+    image: "clscbo.png",
+    link: "https://clscbo.netlify.app/"
+  },
+  {
+    name: "Fortitude Transform CBO",
+    description: "An engaging community site focused on empowerment, resilience, and sustainable growth.",
+    image: "fortitude.png",
+    link: "https://fortitudetransformcbo.org"
+  },
+  {
+    name: "Skope Designs",
+    description: "Our official website featuring creative services, live portfolio, and client stories.",
+    image: "sd.png",
+    link: "https://skopedesigns.co.ke"
+  },
+  {
+    name: "Light and Nature Foundation",
+    description: "An eco-conscious site dedicated to environmental awareness and community education.",
+    image: "lna.png",
+    link: "https://light-and-nature-foundation.netlify.app/"
+  }
+];
+
 
   const container = document.getElementById('projectContainer');
 
@@ -593,6 +606,7 @@
   </script>
 </body>
 </html>
+
 
 
 
