--- a/portfolio.html
+++ b/portfolio.html
@@ -173,7 +173,7 @@ const projects = [
   {
     name: "Judes CBO",
     description: "A community platform supporting social outreach, empowerment, and impact reporting.",
-    image: "judescbo.jpeg",
+    image: "judes.jpeg",
     link: "https://judescbo.org"
   },
   {
@@ -576,6 +576,7 @@ const projects = [
   </script>
 </body>
 </html>
+
 
 
 
